initial commit for backend

--- a/shop-ease/.vscode/settings.json
+++ b/shop-ease/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "createproduct",
         "dont",
-        "productdetails"
+        "productdetails",
+        "signup"
     ]
 }
